--- a/6-21-1.html
+++ b/6-21-1.html
@@ -4,17 +4,20 @@
 	<script src='js/angular-1.3.0.js'></script>
 </head>
 <body ng-app='myApp'>
-<div my-directive my-url='http://baidu.com' my-link-text='Click me to go to baidu'></div>
+	<label for="">The url field:</label>
+	<input type="text" ng-model='theirUrl' ng-init='myLinkText=5566;myUrl="http://baidu.com"'>
+	<div my-directive some-attr='theirUrl' my-link-text='Click me to go to baidu'></div>
 <script type="text/javascript">
 	angular.module('myApp',[]).directive('myDirective',function(){
 		return{
 			restrict:'A',
-			template:'<a href="{{myUrl}}">{{myLinkText}}</a>',
+			// template:'<a href="{{myUrl}}">{{myLinkText}}</a>',
+			template: ' <div> <label>My Url Field:</label> <input type="text" ng-model="myUrl" /><a href="{{myUrl}}">{{myLinkText}}</a></div>',
 			replace:true,
-			scope:{
-				myUrl:'@',
-				myLinkText:'@'
-			}
+			// scope:{
+			// 	myUrl:'=someAttr',
+			// 	myLinkText:'@'
+			// }
 		}
 	})
 </script>
