--- a/base/ng-click.html
+++ b/base/ng-click.html
@@ -16,6 +16,7 @@ var app=angular.module('myApp',[])
 		$scope.counter = 0;
 		$scope.add = function(amount) { $scope.counter += amount; };
 		$scope.subtract = function(amount) { $scope.counter -= amount; };
+		// amount的值是传过来的，不是写死的
 	});
 </script>
 </body>
