--- a/base/标准指令创建.html
+++ b/base/标准指令创建.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-	<script src='js/angular-1.3.0.js'></script>
+	<script type = "text/javascript" src = "http://7nj1p4.com1.z0.glb.clouddn.com/xuzilingangular-1.3.0.js"></script>
 </head>
 <body ng-app='myApp'>
 <my-directive></my-directive>
